This will add logo as well as navigation links into the container

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
 </head>
 <body>
-    
+    <!-- --------------Nav section----------------- -->
+    <section class="container">
+        <div class="row">
+            <div>
+                <img src="./assets/Joesg_Gichon.png" alt="my-logo">
+            </div>
+            <div>
+                <ul>
+                    <a href="#"><li>Home</li></a>
+                    <a href="#"><li>Sevices</li></a>
+                    <a href="#"><li>Projects</li></a>
+                    <a href="#"><li>About</li></a>
+                    <a href="#"><li>Contact</li></a>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- --------------Nav section----------------- -->
 </body>
 </html>
