--- a/index.html
+++ b/index.html
@@ -10,22 +10,33 @@
 </head>
 <body>
     <!-- --------------Nav section----------------- -->
-    <section class="container">
-        <div class="row">
-            <div>
-                <img src="./assets/Joesg_Gichon.png" alt="my-logo">
-            </div>
-            <div>
-                <ul>
-                    <a href="#"><li>Home</li></a>
-                    <a href="#"><li>Sevices</li></a>
-                    <a href="#"><li>Projects</li></a>
-                    <a href="#"><li>About</li></a>
-                    <a href="#"><li>Contact</li></a>
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src="./assets/Joesg_Gichon.png" alt="logo-image"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </section>
+      </nav>
     <!-- --------------Nav section----------------- -->
 </body>
 </html>
