--- a/index.html
+++ b/index.html
@@ -10,33 +10,42 @@
 </head>
 <body>
     <!-- --------------Nav section----------------- -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./assets/Joesg_Gichon.png" alt="logo-image"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+   <section class="container nav-container">
+       <div id="logo-div">
+           <a href="#"><img id="logo" src="./assets/Joesg_Gichon.png" alt="logo-image"></a>
+       </div>
+       <div id="nav-links">
+           <ul>
+               <li><a href="#">Home</a></li>
+               <li><a href="#">Services</a></li>
+               <li><a href="#">Projects</a></li>
+               <li><a href="#">About</a></li>
+               <li><a href="#">Contact</a></li>
+           </ul>
+       </div>
+   </section>
     <!-- --------------Nav section----------------- -->
+
+    <!-- ------------------Introduction section------------------------------ -->
+    <section class="container introduction-container">
+        <div>
+            <h1>Hello There,</h1>
+            <h2>My Name is,</h2>
+            <h2>Joesh_<span>Gichon</span></h2>
+        </div>
+    </section>
+    <!-- ------------------End introduction section--------------------------- -->
+
+    <!-- ---------------------Services Section--------------------------- -->
+    <!-- ---------------------End Services Section--------------------------- -->
+
+    <!-- -------------------------Projects Section---------------------- -->
+    <!-- -------------------------End Projects Section---------------------- -->
+
+    <!-- ------------------About Me Section----------------------------- -->
+    <!-- ------------------End About Me Section----------------------------- -->
+
+    <!-- ----------------Contact Me section------------------------- -->
+    <!-- ----------------End Contact Me section------------------------- -->
 </body>
 </html>
