This will give the introduction section its styles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- ------------------Introduction section------------------------------ -->
     <section class="container introduction-container">
-        <div>
+        <div id="greetings">
             <h1>Hello There,</h1>
             <h2>My Name is,</h2>
             <h2>Joesh_<span>Gichon</span></h2>
