This will add the services section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
     <!-- ------------------End introduction section--------------------------- -->
 
     <!-- ---------------------Services Section--------------------------- -->
+    <section class="container services-container">
+        <div id="service-1">
+            <h2>FrontEnd Developer</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut repellat eum facere, eius necessitatibus nihil. Eum tempore id rerum qui, sint illum et non iusto tempora fuga nam, omnis dolores!
+            </p>
+        </div>
+        <div id="service-2">
+            <h2>BackEnd Developer</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut repellat eum facere, eius necessitatibus nihil. Eum tempore id rerum qui, sint illum et non iusto tempora fuga nam, omnis dolores!
+            </p>
+        </div>
+        <div id="service-3">
+            <h2>Data Scientist</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut repellat eum facere, eius necessitatibus nihil. Eum tempore id rerum qui, sint illum et non iusto tempora fuga nam, omnis dolores!
+            </p>
+        </div>
+    </section>
     <!-- ---------------------End Services Section--------------------------- -->
 
     <!-- -------------------------Projects Section---------------------- -->
