This will add styles to the services section

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
             <h1>Hello There,</h1>
             <h2>My Name is,</h2>
             <h2>Joesh_<span>Gichon</span></h2>
+            <h2 id="service-header">Serv<span>ices</span></h2>
         </div>
     </section>
     <!-- ------------------End introduction section--------------------------- -->
 
     <!-- ---------------------Services Section--------------------------- -->
+    
     <section class="container services-container">
         <div id="service-1">
             <h2>FrontEnd Developer</h2>
