--- a/index.html
+++ b/index.html
@@ -62,6 +62,27 @@
     <!-- ---------------------End Services Section--------------------------- -->
 
     <!-- -------------------------Projects Section---------------------- -->
+    <section class="container projects-container">
+        <h2>Projects</h2>
+        <div class="project-item">
+            <h3>Project-1</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
+            </p>
+        </div>
+        <div class="project-item">
+            <h3>Project-2</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
+            </p>
+        </div>
+        <div class="project-item">
+            <h3>Project-3</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
+            </p>
+        </div>
+    </section>
     <!-- -------------------------End Projects Section---------------------- -->
 
     <!-- ------------------About Me Section----------------------------- -->
