This will styles the project section as well as add projects images into the assets folder

--- a/index.html
+++ b/index.html
@@ -59,25 +59,29 @@
             </p>
         </div>
     </section>
+    
     <!-- ---------------------End Services Section--------------------------- -->
 
     <!-- -------------------------Projects Section---------------------- -->
     <section class="container projects-container">
-        <h2>Projects</h2>
+        <h2>Proj<span>ects</span></h2>
         <div class="project-item">
             <h3>Project-1</h3>
+            <img src="./assets/Screenshot from 2021-07-09 13-03-42.png" alt="">
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
             </p>
         </div>
         <div class="project-item">
             <h3>Project-2</h3>
+            <img src="./assets/Screenshot from 2021-07-09 13-04-12.png" alt="">
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
             </p>
         </div>
         <div class="project-item">
             <h3>Project-3</h3>
+            <img src="./assets/Screenshot from 2021-07-09 13-06-43.png" alt="">
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
             </p>
