This will add about me section as well the profile pic into place

--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
     <!-- -------------------------End Projects Section---------------------- -->
 
     <!-- ------------------About Me Section----------------------------- -->
+    <section class="container about-me-container">
+        <h2>About <span>Me</span></h2>
+        <div>
+            <img src="./assets/IMG_20200823_125735.jpg" alt="profile-picture">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam debitis quasi, nam quos corrupti, veritatis vero nulla recusandae minus ad, voluptates sequi modi! Natus qui, optio odit tenetur accusamus suscipit?
+            </p>
+        </div>
+    </section>
     <!-- ------------------End About Me Section----------------------------- -->
 
     <!-- ----------------Contact Me section------------------------- -->
