--- a/index.html
+++ b/index.html
@@ -102,6 +102,33 @@
     <!-- ------------------End About Me Section----------------------------- -->
 
     <!-- ----------------Contact Me section------------------------- -->
+    <section class="container contact-container">
+        <div>
+            <div>
+                <h2>Contact Me Through</h2>
+                <form action="">
+                    <label for="name">Name</label>
+                    <input type="text">
+
+                    <label for="name">Email</label>
+                    <input type="email">
+
+                    <label for="name"></label>
+                    <textarea name="comments" id="comment" cols="30" rows="10"></textarea>
+                </form>
+            </div>
+            <div>
+                <h2>Follow me</h2>
+                <img src="https://img.icons8.com/color/48/000000/facebook-new.png"/>
+                <img src="https://img.icons8.com/cute-clipart/64/000000/twitter.png"/>
+                <img src="https://img.icons8.com/cute-clipart/64/000000/instagram-new.png"/>
+                <img src="https://img.icons8.com/nolan/64/linkedin.png"/>
+            </div>
+        </div>
+        <div>
+            <h3><p>Copyright © 2021 Joesg_Gichon. All rights reserved</p></h3>
+        </div>
+    </section>
     <!-- ----------------End Contact Me section------------------------- -->
 </body>
 </html>
