--- a/index.html
+++ b/index.html
@@ -103,30 +103,32 @@
 
     <!-- ----------------Contact Me section------------------------- -->
     <section class="container contact-container">
-        <div>
+        <div id="contact-div">
             <div>
-                <h2>Contact Me Through</h2>
+                <h2>Get in touch</h2>
                 <form action="">
                     <label for="name">Name</label>
                     <input type="text">
-
+                    <br>
+                    <br>
                     <label for="name">Email</label>
                     <input type="email">
-
+                    <br>
+                    <br>
                     <label for="name"></label>
                     <textarea name="comments" id="comment" cols="30" rows="10"></textarea>
                 </form>
             </div>
             <div>
                 <h2>Follow me</h2>
-                <img src="https://img.icons8.com/color/48/000000/facebook-new.png"/>
-                <img src="https://img.icons8.com/cute-clipart/64/000000/twitter.png"/>
-                <img src="https://img.icons8.com/cute-clipart/64/000000/instagram-new.png"/>
-                <img src="https://img.icons8.com/nolan/64/linkedin.png"/>
+                <a href="#"><img src="https://img.icons8.com/color/48/000000/facebook-new.png"/></a>
+                <a href="#"><img src="https://img.icons8.com/cute-clipart/64/000000/twitter.png"/></a>
+                <a href=""><img src="https://img.icons8.com/cute-clipart/64/000000/instagram-new.png"/></a>
+                <a href="#"><img src="https://img.icons8.com/nolan/64/linkedin.png"/></a>
             </div>
         </div>
         <div>
-            <h3><p>Copyright © 2021 Joesg_Gichon. All rights reserved</p></h3>
+            <h3><p>Copyright © 2021 Joesh_Gichon. All rights reserved.</p></h3>
         </div>
     </section>
     <!-- ----------------End Contact Me section------------------------- -->
