This will make the contact form more appealing

--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
     <section class="container contact-container">
         <div id="contact-div">
             <div>
-                <h2>Get in touch</h2>
+                <h2>Get in <span>touch</span></h2>
                 <form action="">
                     <label for="name">Name</label>
-                    <input type="text">
+                    <input type="text" placeholder="John Doe" required>
                     <br>
                     <br>
                     <label for="name">Email</label>
-                    <input type="email">
+                    <input type="email" placeholder="abc@gmail.com" required>
                     <br>
                     <br>
                     <label for="name"></label>
-                    <textarea name="comments" id="comment" cols="30" rows="10"></textarea>
+                    <textarea name="comments" id="comment" cols="25" rows="5" placeholder="Comments"></textarea>
                 </form>
             </div>
             <div>
-                <h2>Follow me</h2>
+                <h2>Follow <span>me</span></h2>
                 <a href="#"><img src="https://img.icons8.com/color/48/000000/facebook-new.png"/></a>
                 <a href="#"><img src="https://img.icons8.com/cute-clipart/64/000000/twitter.png"/></a>
                 <a href=""><img src="https://img.icons8.com/cute-clipart/64/000000/instagram-new.png"/></a>
