This will incoporate bootsrap button on contact form

--- a/index.html
+++ b/index.html
@@ -108,17 +108,21 @@
                 <h2>Get in <span>touch</span></h2>
                 <form action="">
                     <label for="name">Name</label>
+                    <br>
                     <input type="text" placeholder="John Doe" required>
                     <br>
-                    <br>
                     <label for="name">Email</label>
+                    <br>
                     <input type="email" placeholder="abc@gmail.com" required>
                     <br>
+                    <label for="name">Comments</label>
                     <br>
-                    <label for="name"></label>
                     <textarea name="comments" id="comment" cols="25" rows="5" placeholder="Comments"></textarea>
+                    <br>
+                    <button type="button" class="btn btn-primary">Submit</button>
                 </form>
             </div>
+            <hr>
             <div>
                 <h2>Follow <span>me</span></h2>
                 <a href="#"><img src="https://img.icons8.com/color/48/000000/facebook-new.png"/></a>
