--- a/index.html
+++ b/index.html
@@ -92,11 +92,28 @@
     <!-- ------------------About Me Section----------------------------- -->
     <section class="container about-me-container">
         <h2>About <span>Me</span></h2>
-        <div>
+        <div style="width: 50%;">
             <img src="./assets/IMG_20200823_125735.jpg" alt="profile-picture">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam debitis quasi, nam quos corrupti, veritatis vero nulla recusandae minus ad, voluptates sequi modi! Natus qui, optio odit tenetur accusamus suscipit?
-            </p>
+        </div>
+        <div id="about-description">
+            <div>
+                <h2>Skills</h2>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>JavaScript</li>
+                    <li>Python</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Hobbies</h2>
+                <ul>
+                    <li>Coding</li>
+                    <li>Watching Movies</li>
+                    <li>Reading</li>
+                    <li>Travelling</li>
+                </ul>
+            </div>
         </div>
     </section>
     <!-- ------------------End About Me Section----------------------------- -->
