This will add buttons on the project section which when clicked, they direct to the required github repo where the code is available

--- a/index.html
+++ b/index.html
@@ -66,25 +66,28 @@
     <section class="container projects-container">
         <h2>Proj<span>ects</span></h2>
         <div class="project-item">
-            <h3>Project-1</h3>
+            <h3>Restraunt Site</h3>
             <img src="./assets/Screenshot from 2021-07-09 13-03-42.png" alt="">
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
             </p>
+            <button type="button" class="btn btn-success"><a href="https://github.com/JoeshGichon/Anita-s-kitchen.git" target="_blank">Learn More</a></button>
         </div>
         <div class="project-item">
-            <h3>Project-2</h3>
+            <h3>Band Website</h3>
             <img src="./assets/Screenshot from 2021-07-09 13-04-12.png" alt="">
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
             </p>
+            <button type="button" class="btn btn-success"><a href="https://github.com/JoeshGichon/favouriteBandProject.git" target="_blank">Learn More</a></button>
         </div>
         <div class="project-item">
-            <h3>Project-3</h3>
+            <h3>CarYard Auto Site</h3>
             <img src="./assets/Screenshot from 2021-07-09 13-06-43.png" alt="">
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
             </p>
+            <button type="button" class="btn btn-success"><a href="https://github.com/JoeshGichon/caryard-auto-moringa-school-project.git" target="_blank">Learn More</a></button>
         </div>
     </section>
     <!-- -------------------------End Projects Section---------------------- -->
