--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
        </div>
        <div id="nav-links">
            <ul>
-               <li><a href="#">Home</a></li>
-               <li><a href="#">Services</a></li>
-               <li><a href="#">Projects</a></li>
-               <li><a href="#">About</a></li>
-               <li><a href="#">Contact</a></li>
+               <li><a href="#home">Home</a></li>
+               <li><a href="#services">Services</a></li>
+               <li><a href="#projects">Projects</a></li>
+               <li><a href="#about">About</a></li>
+               <li><a href="#contact">Contact</a></li>
            </ul>
        </div>
    </section>
     <!-- --------------Nav section----------------- -->
 
     <!-- ------------------Introduction section------------------------------ -->
-    <section class="container introduction-container">
+    <section class="container introduction-container" id="home">
         <div id="greetings">
             <h1>Hello There,</h1>
             <h2>My Name is,</h2>
@@ -39,7 +39,7 @@
 
     <!-- ---------------------Services Section--------------------------- -->
     
-    <section class="container services-container">
+    <section class="container services-container" id="services">
         <div id="service-1">
             <h2>FrontEnd Developer</h2>
             <p>
@@ -63,7 +63,7 @@
     <!-- ---------------------End Services Section--------------------------- -->
 
     <!-- -------------------------Projects Section---------------------- -->
-    <section class="container projects-container">
+    <section class="container projects-container" id="projects">
         <h2>Proj<span>ects</span></h2>
         <div class="project-item">
             <h3>Restraunt Site</h3>
@@ -93,7 +93,7 @@
     <!-- -------------------------End Projects Section---------------------- -->
 
     <!-- ------------------About Me Section----------------------------- -->
-    <section class="container about-me-container">
+    <section class="container about-me-container" id="about">
         <h2>About <span>Me</span></h2>
         <div style="width: 50%;">
             <img src="./assets/IMG_20200823_125735.jpg" alt="profile-picture">
@@ -122,7 +122,7 @@
     <!-- ------------------End About Me Section----------------------------- -->
 
     <!-- ----------------Contact Me section------------------------- -->
-    <section class="container contact-container">
+    <section class="container contact-container" id="contact">
         <div id="contact-div">
             <div>
                 <h2>Get in <span>touch</span></h2>
