This will populate the services section with tech info the i am offering as my services

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 <body>
     <!-- --------------Nav section----------------- -->
    <section class="container nav-container">
-       <div id="logo-div">
-           <a href="#"><img id="logo" src="./assets/Joesg_Gichon.png" alt="logo-image"></a>
-       </div>
-       <div id="nav-links">
-           <ul>
-               <li><a href="#home">Home</a></li>
-               <li><a href="#services">Services</a></li>
-               <li><a href="#projects">Projects</a></li>
-               <li><a href="#about">About</a></li>
-               <li><a href="#contact">Contact</a></li>
-           </ul>
-       </div>
+        <div id="logo-div" class="row">
+            <a href="#"><img id="logo" src="./assets/Joesg_Gichon.png" alt="logo-image"></a>
+        </div>
+        <div id="nav-links" class="row">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
    </section>
     <!-- --------------Nav section----------------- -->
 
     <!-- ------------------Introduction section------------------------------ -->
     <section class="container introduction-container" id="home">
-        <div id="greetings">
+        <div id="greetings" class="row">
             <h1>Hello There,</h1>
             <h2>My Name is,</h2>
             <h2>Joesh_<span>Gichon</span></h2>
@@ -43,19 +43,19 @@
         <div id="service-1">
             <h2>FrontEnd Developer</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut repellat eum facere, eius necessitatibus nihil. Eum tempore id rerum qui, sint illum et non iusto tempora fuga nam, omnis dolores!
+                I am an experienced frontend developer conversant with frontend technology such as HTML5,CSS3,Vanilla javascript. I am also in the process of learning frontend javascript libraries like react js, Angulla js as well as Vue js.
             </p>
         </div>
         <div id="service-2">
             <h2>BackEnd Developer</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut repellat eum facere, eius necessitatibus nihil. Eum tempore id rerum qui, sint illum et non iusto tempora fuga nam, omnis dolores!
+                I am a seasoned backend developers with 2 years industrial experience.I am Well versed with languages like node js as well as python web development libraries like Django and flask. I am also conversant with database technology like mysql, ms sql as well as postgress databases.
             </p>
         </div>
         <div id="service-3">
             <h2>Data Scientist</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut repellat eum facere, eius necessitatibus nihil. Eum tempore id rerum qui, sint illum et non iusto tempora fuga nam, omnis dolores!
+                I am conversant with data visuazation tools like DJ3 js library, python matplotlib library as well as R ggplot2 libary. I am also well versed with machine learning technologies like supervised ML, unsupervised ML as well as reinforcement learning. 
             </p>
         </div>
     </section>
