--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h3>Restraunt Site</h3>
             <img src="./assets/Screenshot from 2021-07-09 13-03-42.png" alt="">
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
+                The above website is a Restraunt site that forcuses on the user interface.It uses technologies like HTML5, CSS3 as well as pure vanilla javascript.
             </p>
             <button type="button" class="btn btn-success"><a href="https://github.com/JoeshGichon/Anita-s-kitchen.git" target="_blank">Learn More</a></button>
         </div>
@@ -77,7 +77,7 @@
             <h3>Band Website</h3>
             <img src="./assets/Screenshot from 2021-07-09 13-04-12.png" alt="">
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
+                The above website is a band website that uses tech like HTML5 and CSS3 technologies.It forcuses on the user interface i.e what the user is able to see and interact with in his/her browser.
             </p>
             <button type="button" class="btn btn-success"><a href="https://github.com/JoeshGichon/favouriteBandProject.git" target="_blank">Learn More</a></button>
         </div>
@@ -85,7 +85,7 @@
             <h3>CarYard Auto Site</h3>
             <img src="./assets/Screenshot from 2021-07-09 13-06-43.png" alt="">
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat assumenda dolorem tempora corporis ea dolorum, tenetur ipsum nobis vitae doloremque itaque suscipit esse quasi, porro voluptatem dolores, labore odit illum!
+                The above project is a full stack project that furcuses on both frontend and well as backend tech. Technologies used are HTML, CSS, javascript, Django as well postgress data base.
             </p>
             <button type="button" class="btn btn-success"><a href="https://github.com/JoeshGichon/caryard-auto-moringa-school-project.git" target="_blank">Learn More</a></button>
         </div>
@@ -145,10 +145,10 @@
             <hr>
             <div>
                 <h2>Follow <span>me</span></h2>
-                <a href="#"><img src="https://img.icons8.com/color/48/000000/facebook-new.png"/></a>
-                <a href="#"><img src="https://img.icons8.com/cute-clipart/64/000000/twitter.png"/></a>
-                <a href=""><img src="https://img.icons8.com/cute-clipart/64/000000/instagram-new.png"/></a>
-                <a href="#"><img src="https://img.icons8.com/nolan/64/linkedin.png"/></a>
+                <a href="https://www.facebook.com/joesh.gichon.3/" target="_blank"><img src="https://img.icons8.com/color/48/000000/facebook-new.png"/></a>
+                <a href="https://twitter.com/gichon_joeshbook.com/joesh.gichon.3/" target="_blank"><img src="https://img.icons8.com/cute-clipart/64/000000/twitter.png"/></a>
+                <a href="https://www.linkedin.com/in/john-gicho-50ba9b1a9/" target="_blank"><img src="https://img.icons8.com/cute-clipart/64/000000/instagram-new.png"/></a>
+                <a href="https://www.instagram.com/joeshgichon/" target="_blank"><img src="https://img.icons8.com/nolan/64/linkedin.png"/></a>
             </div>
         </div>
         <div>
